<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/layout">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:id="@+id/CardView">
        <ImageView
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:background="@drawable/image_default"
                android:scaleType="centerCrop"
                android:transitionName="@string/tr_imageView"
                android:id="@+id/ImageView"/>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="Day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/DayText"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                    android:textSize="60sp"
                    android:transitionName="@string/tr_dateView"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="Month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/MonthText"
                    android:textSize="40sp"
                    android:textColor="@android:color/white"
                    android:transitionName="@string/tr_monthView"
                    app:layout_constraintTop_toBottomOf="@id/DayText"
                    app:layout_constraintStart_toStartOf="@id/DayText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:paddingLeft="8dp"
                    android:transitionName="@string/tr_titleView"
                    android:textSize="24sp"
                    android:textAppearance="?attr/textAppearanceHeadline6" android:id="@+id/TitleText"
                    android:background="@color/black_overlay"
                    android:textColor="@color/design_default_color_background"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:transitionName="TR_LOCATION"
                    android:textSize="24sp"
                    android:textAppearance="?attr/textAppearanceHeadline6" android:id="@+id/LocationText"
                    android:background="@color/black_overlay"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="time"
                    android:paddingLeft="8dp"
                    android:transitionName="@string/tr_timeView"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceBody2" android:id="@+id/TimeText"
                    android:background="@color/black_overlay"
                    android:textColor="@color/design_default_color_background"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:transitionName="TR_CONTENT"
                    android:textSize="24sp"
                    android:textAppearance="?attr/textAppearanceHeadline6" android:id="@+id/ContentText"
                    android:background="@color/black_overlay"
                    android:textColor="@color/design_default_color_background"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>