<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_marginBottom="48dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@drawable/image_default"
                    android:scaleType="centerCrop"
                    android:id="@+id/ImageView"
                    android:transitionName="@string/tr_imageView"
                    android:layout_weight="0"
                    tools:ignore="MissingConstraints"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_star_border_black_24dp"
                    android:id="@+id/StarButton" app:layout_constraintEnd_toEndOf="@+id/ImageView"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_delete_black_24dp"
                    android:id="@+id/DeleteButton" app:layout_constraintEnd_toStartOf="@id/StarButton"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>
            <TextView
                    android:text="Day"
                    android:transitionName="@string/tr_dateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/DayText"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                    android:textSize="60sp"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="Month"
                    android:transitionName="@string/tr_monthView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/MonthText"
                    android:textSize="40sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toBottomOf="@id/DayText"
                    app:layout_constraintStart_toStartOf="@id/DayText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="DAYGRAM EXAMPLE SNAPSHOT"
                android:transitionName="@string/tr_titleView"
                android:textSize="24sp"
                android:textAppearance="?attr/textAppearanceHeadline6" android:id="@+id/TitleText"
                android:layout_weight="0"/>

        <TextView
                android:text="Seoul Suwon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:id="@+id/LocationText"
                android:textColor="@color/black_overlay"
                android:layout_weight="0"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:text="2019-05-15 21:05:30"
                android:transitionName="@string/tr_timeView"
                android:textSize="12sp"
                android:textColor="@color/black_overlay"
                android:textAppearance="?attr/textAppearanceBody2" android:id="@+id/TimeText"
                android:layout_weight="0"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="블라블라블라블라"
                        android:transitionName="@string/tr_mainView"
                        android:textSize="16sp"
                        android:textAppearance="?attr/textAppearanceBody2" android:id="@+id/MainText"
                        android:layout_weight="1"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>